fix: Further tighten bottom spacing for featured-media in styles.css.

--- a/styles.css
+++ b/styles.css
@@ -602,7 +602,7 @@ th {
 }
 
 #listing-featured-media {
-  margin-bottom: -2.5rem !important;
+  margin-bottom: -3.5rem !important;
 }
 
 #featured-media-pagination .quarto-listing {
